Changes in @new@:
================

Bug Fixes
---------------------
* A bug in purging the stompserver message queue when a large number of files
  are present has been fixed (RBL-3472).


Changes in 4.1.2:
================

Web Front End Changes
---------------------
* The versions of special troves used to build an Installable
  ISO is now displayed in the image build's detail page. (RBL-2600)
* A new page will require the acceptance of the rPath terms of service prior 
  to initial setup. (RBL-3213)
* Terms of service and privacy policy links now open in new tabs/windows.

Bug Fixes
---------------------
* The default search settings in the web interface was not being set
  properly, causing no radio buttons to be selected in the interface.
  This has been corrected. (RBL-3002)
* Fixed a bug preventing admin users from being able to browse the
  repository for private products they are not members of. (RBL-3108)
* The edit external products page now retrieves the correct label
  information in all cases. (RBL-3179)
* Fixed a bug with UI rendering in the MCP Console Plug-in on IE 6. (RBL-3401)


Changes in 4.1.1
================

Web Front End Changes
---------------------

* The "Domain Name" field, which was removed from the "New Product"
  page in version 4.1.0, has been restored. (RBL-3037)

Bug Fixes
---------------------

* Extra troves such as anaconda-custom selected through the web
  interface are now properly included in builds. (RBL-3011)
* Custom troves with names other than the default can now be used
  in builds. (RBL-2957)
* Packages with names starting with "kernel" that are not named "kernel"
  will no longer be pinned by default in generated images. (RBL-3000)
* domU-flavored images based on rPath Linux 2 now have the correct root
  device label. (RBL-3036)
* Log files written by scripts such as outbound mirrors are now properly
  created after they are rotated. (RBL-3042)


Changes in 4.1.0
================

Web Front End Changes